modules/gdscript/tests/scripts/parser/errors/onready_with_oninstantiated.gd
extends Node

@oninstantiated @onready var node

func test():
	pass
